--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body{
   background: url("../img/background.jpg") repeat;
   background-color: #cccccc;
   color: #f2f2f2;
+  font-family: cursive;
 }
 
 h1{
@@ -11,6 +12,24 @@ h1{
 
 h2{
   text-align: center;
+  font-size: 30pt;
+  color: #e60000;
+  text-shadow: black 1px 1px;
+}
+
+h3{
+  font-size: 25pt;
+  font-style: italic;
+}
+
+h4{
+  font-size: 20pt;
+  color: #ff3333;
+  text-shadow: black 1px 1px;
+}
+
+p, li{
+  font-size: 16pt;
 }
 
 label{
@@ -29,17 +48,29 @@ input[type="checkbox"]+label{
   background-color: #800000;
   color: #f2f2f2;
   border: 4px double #a6a6a6;
-  font-family: cursive;
+  font-family: fantasy;
   padding-top: 30px;
   padding-bottom: 30px;
+  text-shadow: black 2px 2px;
 }
 
 .btn{
   margin-right: 20px;
 }
 
+.toppingDiv{
+  width: 50%;
+}
+
 #orderDisplay, #costDisplay, #confirmDisplay{
   display: none;
+}
+
+#orderDisplay{
+  background-image: url("../img/pizzaTopping.png");
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #image{
@@ -57,7 +88,8 @@ input[type="checkbox"]+label{
 }
 
 #costList{
-  justify-content: left;
+  justify-content: right;
+  text-align: right;
 }
 
 .grow:hover{
@@ -92,19 +124,19 @@ input[type="checkbox"]+label{
     transform: translateX(0%); 
   } 
   15% { 
-    transform: translateX(-25%) rotate(-10deg); 
+    transform: translateX(-25%) rotate(-15deg); 
   } 
   30% { 
-    transform: translateX(20%) rotate(6deg); 
+    transform: translateX(20%) rotate(9deg); 
   } 
   45% { 
-    transform: translateX(-15%) rotate(-6deg);
+    transform: translateX(-15%) rotate(-9deg);
   } 
   60% { 
-    transform: translateX(10%) rotate(4deg); 
+    transform: translateX(10%) rotate(6deg); 
   }
   75% { 
-    transform: translateX(-5%) rotate(-2deg); 
+    transform: translateX(-5%) rotate(-3deg); 
   }
   100% { 
     transform: translateX(0%); 
